--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -28,16 +28,24 @@
                         <span id="form_bathymetry__btn_ok" class="btn btn-success btn-sm">1. Ok</span>
                     </div>
                     <hr class="my-1">
-                    <div class="d-block">                                
+                    <div class="d-block"> 
+                        <b>Шаг экрана</b><br>                        
+                        dШ.(lat) <input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.00001" step="0.000001" id="sonar__resolution_dLat" style="width: 90px">                                 
+                        <br>
+                        dД.(lng) <input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.00001" step="0.000001" id="sonar__resolution_dLng" style="width: 90px">   
+                    </div>
+                    <hr class="my-1">
+                    <div class="d-block">  
                         <span id="sonar__real_ok" class="btn btn-sm btn-success mb-1">2. Real draw</span> 
+                        <br>
                         <span id="sonar__extrapolation_ok" class="btn btn-sm btn-success">2. Extrapolation draw</span> 
                     </div>
                     <hr class="my-1">
                     <div class="d-block">
                         <b>Захват сечения</b><br>
-                        ±Ш.(lat) <input type="number" class="form-control d-inline-block form-control-sm" min="0" value="0.00001" step="0.000001" id="sonar__section_dLat" style="width: 90px">                                 
+                        ±Ш.(lat) <input type="number" class="form-control d-inline-block form-control-sm" min="0" value="0.00001" step="0.000001" id="sonar__section_dLat_limit" style="width: 90px">                                 
                         <br>
-                        ±Д.(lng) <input type="number" class="form-control d-inline-block form-control-sm" min="0" value="0.00001" step="0.000001" id="sonar__section_dLng" style="width: 90px">   
+                        ±Д.(lng) <input type="number" class="form-control d-inline-block form-control-sm" min="0" value="0.00001" step="0.000001" id="sonar__section_dLng_limit" style="width: 90px">   
                         <br>                                 
                         <input type="radio" name="sonar__section_isVertical" value="0" checked> --- &nbsp;&nbsp;
                         <input type="radio" name="sonar__section_isVertical" value="1"> | 
@@ -115,13 +123,13 @@
                 //                
                 let sonar__section_pointsLatLng_used = [];
                 let sonar__section_isVertical = false;
-                let sonar__section_dLat = 0;
-                let sonar__section_dLng = 0;
+                let sonar__section_dLat_limit = 0;
+                let sonar__section_dLng_limit = 0;
                 //
                 let sonar__depth_min = 0;
                 let sonar__depth_max = 0;
-                let depth_min_allow = 0;
-                let depth_max_allow = 0;
+                let depth_min_limit = 0;
+                let depth_max_limit = 0;
                 let sonar__dataItemsCount = 0;
                 const sonar__colors_depth = [
                     '#f51c03',
@@ -146,8 +154,12 @@
                 let sonar__mks2px_fullScale_dx = 1;
                 const sonar__pulses_block_h_px = 100;
                 const sonar__mks2m = 1367.0;
-                const sonar__pulse_w_px = 8; //px;
-                const sonar__pulse_w_offset_coef = 0.8 * 0.000001;
+                let sonar__resolution_dLat = 0;
+                let sonar__resolution_dLng = 0;
+                const sonar__pulse_size_px = 8; //px;
+                let sonar__pulse_size_offset_coef_lat = sonar__pulse_size_px * sonar__resolution_dLat;
+                let sonar__pulse_size_offset_coef_lng = sonar__pulse_size_px * sonar__resolution_dLng;
+
                 const sonar__palette_power_rgb = [
                     '#0011fa',
                     '#016efa',
@@ -198,6 +210,13 @@
                         sonar__section_init();
                     });
 
+                    $('#sonar__resolution_dLat').change(() => {
+                        sonar__resolution_calc();
+                    });
+                    $('#sonar__resolution_dLng').change(() => {
+                        sonar__resolution_calc();
+                    });
+
                     $('#sonar__over_bottom').change(() => {
                         if ($('#sonar__over_bottom').is(":checked")) {
                             $('div.sonar__plane_point_pulses').show();
@@ -228,6 +247,8 @@
                 }
 //==================================== START ===============================================================================================================================
                 function sonar__real_process() {
+                    sonar__resolution_calc();
+
                     sonar__plane_points_init(sonar__real_pointsLatLng);
                     sonar__plane_points_draw();
 
@@ -238,6 +259,8 @@
                     sonar__section_init();
                 }
                 function sonar__extrapolation_process() {
+                    sonar__resolution_calc();
+
                     sonar__extrapolation_init();
 
                     sonar__plane_points_init(sonar__extrapolation_pointsLatLng);
@@ -257,14 +280,14 @@
                     $('#sonar__section_block').html('');
                     sonar__section_pointsLatLng_used = [];
                     sonar__section_isVertical = parseInt($('input[name="sonar__section_isVertical"]:checked').val()) === 1 ? true : false;
-                    sonar__section_dLat = parseFloat($('#sonar__section_dLat').val()) || 0;
-                    sonar__section_dLng = parseFloat($('#sonar__section_dLng').val()) || 0;
+                    sonar__section_dLat_limit = parseFloat($('#sonar__section_dLat_limit').val()) || 0;
+                    sonar__section_dLng_limit = parseFloat($('#sonar__section_dLng_limit').val()) || 0;
                     $('div.sonar__section_radius').remove();
                     sonar__map_points_draw();//clean red-rect radius                     
 
                     $('div.sonar__plane_point_dot').unbind('click').click(function () {
                         const lat = parseFloat($(this).attr('lat')) || 0;
-                        const lng = parseFloat($(this).attr('lng')) || 0;                        
+                        const lng = parseFloat($(this).attr('lng')) || 0;
                         sonar__section_pointsInRadius_draw(lat, lng); //точку, в окрестности которой будем искать                       
                     });
                 }
@@ -274,8 +297,8 @@
                     }
 
                     //draw red RECT +_ dlat dlong in 3D-points-block in selected lat-long
-                    const radius_h_px = (2 * sonar__section_dLat) / sonar__pulse_w_offset_coef;
-                    const radius_w_px = (2 * sonar__section_dLng) / sonar__pulse_w_offset_coef;
+                    const radius_h_px = (2 * sonar__section_dLat_limit) / sonar__pulse_size_offset_coef_lat;
+                    const radius_w_px = (2 * sonar__section_dLng_limit) / sonar__pulse_size_offset_coef_lng;
                     const radius_top_px = sonar__pulses_block_h_px + sonar__getOffsetLat_px(lat) - 0.5 * radius_h_px;
                     const radius_left_px = sonar__getOffsetLng_px(lng) - 0.5 * radius_w_px;
                     let html = '<div class="sonar__section_radius" style="left:' + radius_left_px + 'px; top:' + radius_top_px + 'px; width:' + radius_w_px + 'px; height:' + radius_h_px + 'px; ">';
@@ -301,7 +324,7 @@
                             continue;//dont draw this point -> it already drawn 
                         }
 
-                        if (dLat <= sonar__section_dLat && dLng <= sonar__section_dLng) {
+                        if (dLat <= sonar__section_dLat_limit && dLng <= sonar__section_dLng_limit) {
                             $('#sonar__section_block').append(sonar__section_point(lat_curr, lng_curr, sonar__section_pointsLatLng[index]));
                             sonar__section_pointsLatLng_used[idx] = 1;
                         }
@@ -316,14 +339,14 @@
                     const left_px = sonar__section_isVertical ? sonar__getOffsetLat_px(lat) : sonar__getOffsetLng_px(lng);
                     let mt_px = 5 + sonar__mks2px_fullScale(data.depth_mks, sonar__depth_max * sonar__mks2m);
 
-                    let html = '<div class="sonar__section_pulseBottom" title="' + (Math.round(data.depthM * 100) / 100) + 'm" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; "></div>';
+                    let html = '<div class="sonar__section_pulseBottom" title="' + (Math.round(data.depthM * 100) / 100) + 'm" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_size_px + 'px; "></div>';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW);
                         mt_px = sonar__mks2px_fullScale(pulse.R);
-                        html += '<div class="sonar__section_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
+                        html += '<div class="sonar__section_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__pulse_size_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
                     return html;
                 }
@@ -348,18 +371,18 @@
                     const left_px = sonar__getOffsetLng_px(lng);
                     const top_px = sonar__getOffsetLat_px(lat);
 
-                    let html = '<div title="' + (Math.round((data.depthM) * 100) / 100) + 'm" class="sonar__plane_point_pulses" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__pulse_w_px + 'px; ">'; //border-bottom: ' + sonar__pulse_w_px + 'px solid ' + depth_color + ';
+                    let html = '<div title="' + (Math.round((data.depthM) * 100) / 100) + 'm" class="sonar__plane_point_pulses" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__pulse_size_px + 'px; ">'; //border-bottom: ' + sonar__pulse_size_px + 'px solid ' + depth_color + ';
                     for (const pulse of data.pulses) {
                         if (pulse.R >= (data.depth_mks - 100)) {
                             continue; //only fish over bottom                            
                         }
                         pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW); //fish over bottom                         
                         let mt_px = sonar__mks2px_fullScale(pulse.R + (sonar__depth_max - data.depthM) * sonar__mks2m); //прижмем ко дну, а не к поверхности
-                        html += '<div class="sonar__plane_point_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
+                        html += '<div class="sonar__plane_point_pulse" title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__pulse_size_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
                     html += '</div>';
 
-                    /*html += '<div class="logic_pulsesFull_block" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + depth_color + '; width:' + sonar__pulse_w_px + 'px; ">';
+                    /*html += '<div class="logic_pulsesFull_block" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + depth_color + '; width:' + sonar__pulse_size_px + 'px; ">';
                      for (const pulse of data.pulses) {
                      let pulse_opacity, pulse_color;
                      if (pulse.R >= (data.depth_mks - 100)) {
@@ -371,11 +394,11 @@
                      }
                      let mt_px = sonar__mks2px_fullScale(pulse.R);
                      let h_px = Math.max(sonar__mks2px_fullScale(pulse.W + pulse.R) - mt_px, 2);
-                     html += '<div class="logic_pulseFull" title="R=' + pulse.R + ' W=' + pulse.W + ' ' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (sonar__pulse_w_px - 2) + 'px; background-color:' + pulse_color + '; opacity: ' + pulse_opacity + ' "></div>';
+                     html += '<div class="logic_pulseFull" title="R=' + pulse.R + ' W=' + pulse.W + ' ' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (sonar__pulse_size_px - 2) + 'px; background-color:' + pulse_color + '; opacity: ' + pulse_opacity + ' "></div>';
                      }
                      html += '</div>';*/
 
-                    html += '<div class="sonar__plane_point_dot" lat="' + lat + '" lng="' + lng + '" title="' + (Math.round(data.depthM * 100) / 100) + 'm lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + (sonar__pulses_block_h_px + top_px) + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_w_px + 'px; height:' + sonar__pulse_w_px + 'px; ">';
+                    html += '<div class="sonar__plane_point_dot" lat="' + lat + '" lng="' + lng + '" title="' + (Math.round(data.depthM * 100) / 100) + 'm lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + (sonar__pulses_block_h_px + top_px) + 'px; background-color:' + depth_color + '; width:' + sonar__pulse_size_px + 'px; height:' + sonar__pulse_size_px + 'px; ">';
                     html += '</div>';
 
                     $('#sonar__plane_block').append(html);
@@ -396,7 +419,7 @@
                 }
                 function sonar__extrapolation_point_calc(lat, lng) {
                     let depthsWeightingFactors = [];
-                    for (let index in sonar__real_pointsLatLng) {  
+                    for (let index in sonar__real_pointsLatLng) {
                         const ll = index.split(/_/);
                         const lat_curr = parseFloat(ll[0]) || 0;
                         const lng_curr = parseFloat(ll[1]) || 0;
@@ -512,8 +535,8 @@
                     }
                     const myRectangle = new ymaps.Rectangle([
                         // Задаем координаты диагональных углов прямоугольника.
-                        [(lat + sonar__section_dLat), (lng - sonar__section_dLng)],
-                        [(lat - sonar__section_dLat), (lng + sonar__section_dLng)]
+                        [(lat + sonar__section_dLat_limit), (lng - sonar__section_dLng_limit)],
+                        [(lat - sonar__section_dLat_limit), (lng + sonar__section_dLng_limit)]
                     ], {
                         //Свойства
                         hintContent: '',
@@ -562,12 +585,12 @@
                 }
 
                 function sonar__getOffsetLat_px(lat) {
-                    let px = Math.round((sonar__lat_max - lat) / sonar__pulse_w_offset_coef);
+                    let px = Math.round((sonar__lat_max - lat) / sonar__pulse_size_offset_coef_lat);
                     return px;
 
                 }
                 function sonar__getOffsetLng_px(lng) {
-                    let px = Math.round((lng - sonar__lng_min) / sonar__pulse_w_offset_coef);
+                    let px = Math.round((lng - sonar__lng_min) / sonar__pulse_size_offset_coef_lng);
                     return px;
                 }
 
@@ -590,8 +613,8 @@
                     sonar__real_pointsLatLng = [];
                     sonar__depth_min = 0;
                     sonar__depth_max = 0;
-                    depth_min_allow = parseFloat($('#form_bathymetry__depth_min_input').val()) || 0;
-                    depth_max_allow = parseFloat($('#form_bathymetry__depth_max_input').val()) || 0;
+                    depth_min_limit = parseFloat($('#form_bathymetry__depth_min_input').val()) || 0;
+                    depth_max_limit = parseFloat($('#form_bathymetry__depth_max_input').val()) || 0;
 
                     const lines = $('#form_bathymetry__data_input').val().split(/\n/);
                     for (const line of lines) {
@@ -647,7 +670,7 @@
                         lng = Math.round(lng * 1000000) / 1000000;//6
 
                         let depthM = depth_mks / sonar__mks2m;
-                        if (lat > 0 && lng > 0 && depthM >= depth_min_allow && depthM <= depth_max_allow) {
+                        if (lat > 0 && lng > 0 && depthM >= depth_min_limit && depthM <= depth_max_limit) {
 
                             //point real
                             const idx = lat + '_' + lng;
@@ -699,7 +722,7 @@
                     $('#sonar__palette_depth_max_text').html(Math.round(sonar__depth_max * 100) / 100 + 'm');
 
                     sonar__getColor_depth_m_dx = (sonar__depth_max - sonar__depth_min) / sonar__colors_depth.length;
-                    sonar__mks2px_fullScale_dx = (depth_max_allow * sonar__mks2m) / sonar__pulses_block_h_px;
+                    sonar__mks2px_fullScale_dx = (depth_max_limit * sonar__mks2m) / sonar__pulses_block_h_px;
                 }
                 function sonar__getPulse_w_realBottom_mks_min(depth_mks) {
                     if (depth_mks < 1500) {
@@ -740,8 +763,12 @@
                         //$('div.sonar__plane_point_pulse').css('opacity', 1);
                     }
                 }
-
-
+                function sonar__resolution_calc() {
+                    sonar__resolution_dLat = parseFloat($('#sonar__resolution_dLat').val()) || 0;
+                    sonar__resolution_dLng = parseFloat($('#sonar__resolution_dLng').val()) || 0;
+                    sonar__pulse_size_offset_coef_lat = sonar__resolution_dLat / sonar__pulse_size_px;
+                    sonar__pulse_size_offset_coef_lng = sonar__resolution_dLng / sonar__pulse_size_px;
+                }
             </script>
         </main>
         <script src="jquery-3.6.0.min.js"></script>
